@@ -72,6 +72,7 @@ mbswidth.m4 \
 mkdtemp.m4 \
 onceonly.m4 \
 pathmax.m4 \
+quote.m4 \
 quotearg.m4 \
 readlink.m4 \
 relocatable.m4 \
