@@ -1,5 +1,15 @@
 2005-01-06  Bruno Haible  <bruno@clisp.org>
 
+	* quote.h: New file, from gnulib.
+	* quote.c: New file, from gnulib.
+	* Makefile.am (libgettextlib_la_SOURCES): Add quote.h, quote.c.
+	* Makefile.msvc (OBJECTS): Add quote.obj.
+	(quote.obj): New rule.
+	* Makefile.vms (OBJECTS): Add quote.obj.
+	(quote.obj): New rule.
+
+2005-01-06  Bruno Haible  <bruno@clisp.org>
+
 	* exitfail.h: New file, from gnulib.
 	* exitfail.c: New file, from gnulib.
 	* Makefile.am (libgettextlib_la_SOURCES): Add exitfail.h, exitfail.c.
