@@ -1,5 +1,10 @@
 2005-01-06  Bruno Haible  <bruno@clisp.org>
 
+	* quote.m4: New file, from gnulib.
+	* Makefile.am (EXTRA_DIST): Add quote.m4.
+
+2005-01-06  Bruno Haible  <bruno@clisp.org>
+
 	* exitfail.m4: New file, from gnulib.
 	* Makefile.am (EXTRA_DIST): Add exitfail.m4.
 
